Update home.html on Business services
edited the paragraph on H5 business services

--- a/home.html
+++ b/home.html
@@ -51,7 +51,7 @@
   <br>
   
   <!-- The dots/circles -->
-  <div style="text-align:center">
+  <div style="text-align: center">
       <span class="dot" onclick="currentSlide(1)"></span>
       <span class="dot" onclick="currentSlide(2)"></span>
       <span class="dot" onclick="currentSlide(3)"></span>
@@ -69,12 +69,12 @@
 
         <div class="Sales" data-wow-duration="1000ms" data-wow-delay="300ms" style="visibility: visible;-webkit-animation-duration: 1000ms; -moz-animation-duration: 1000ms; animation-duration: 1000ms;-webkit-animation-delay: 300ms; -moz-animation-delay: 300ms; animation-delay: 300ms;">
         <h5>Computer Sales & Repair Services.</h5>
-            <p>Our team provides effecient <br>computer solutions including repairing your<br> PC and downloading & installation of <br>softwares that runs smoothly on your PC. </p>
+            <p>Our team provides efficient <br>computer solutions including repairing your<br> PC and downloading & installation of <br>softwares that runs smoothly on your PC. </p>
         </div>
 
         <div class="Business" data-wow-duration="1000ms" data-wow-delay="300ms" style="visibility: visible;-webkit-animation-duration: 1000ms; -moz-animation-duration: 1000ms; animation-duration: 1000ms;-webkit-animation-delay: 300ms; -moz-animation-delay: 300ms; animation-delay: 300ms;"> 
         <h5>Business Solutions & Documentation.</h5>
-          <p>We have been helping local businesses draft <br>their business documents from business plans<br> to invoices</p>
+          <p>We have been helping local small and big businesses draft <br>their business documents from business plans<br> to invoices</p>
         </div>  
     
       </div>
